--- a/geth/Dockerfile.source
+++ b/geth/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Geth in a stock Go build container
-FROM golang:1.20-alpine as builder
+FROM golang:1.21-alpine as builder
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
@@ -11,7 +11,7 @@ RUN apk update && apk add --no-cache make gcc musl-dev linux-headers git bash
 WORKDIR /src
 RUN bash -c "git clone https://github.com/ethereum/go-ethereum.git && cd go-ethereum && git config advice.detachedHead false && git fetch --all --tags && \
 if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:geth-pr; git checkout geth-pr; else git checkout ${BUILD_TARGET}; fi && \
-make all"
+go run build/ci.go install -static"
 
 # Pull all binaries into a second stage deploy container
 FROM alpine:3
