--- a/.github/workflows/test-prysm-geth.yml
+++ b/.github/workflows/test-prysm-geth.yml
@@ -18,8 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Create .env file
-        run: |
-          cp default.env .env
+        run: cp default.env .env
       - name: Set Prysm/Geth
         run: |
           source ./.github/helper.sh
@@ -30,17 +29,15 @@ jobs:
           var=FEE_RECIPIENT
           set_value_in_env
       - name: Start Prysm/Geth
-        run: |
-          ./ethd up
+        run: ./ethd up
+      - name: Pause for 30 seconds
+        run: sleep 30
       - name: Test Prysm CL
-        run: |
-          ./.github/check-service.sh consensus
+        run: ./.github/check-service.sh consensus
       - name: Test Prysm VC
-        run: |
-          ./.github/check-service.sh validator
+        run: ./.github/check-service.sh validator
       - name: Test Geth
-        run: |
-          ./.github/check-service.sh execution
+        run: ./.github/check-service.sh execution
       - name: Set Prysm/Geth w/ VC
         run: |
           source ./.github/helper.sh
@@ -48,14 +45,12 @@ jobs:
           var=COMPOSE_FILE
           set_value_in_env
       - name: Start Prysm/Geth
-        run: |
-          ./ethd up
+        run: ./ethd up
+      - name: Pause for 30 seconds
+        run: sleep 30
       - name: Test Prysm CL
-        run: |
-          ./.github/check-service.sh consensus
+        run: ./.github/check-service.sh consensus
       - name: Test Prysm VC
-        run: |
-          ./.github/check-service.sh validator
+        run: ./.github/check-service.sh validator
       - name: Test Geth
-        run: |
-          ./.github/check-service.sh execution
+        run: ./.github/check-service.sh execution
