--- a/teku/Dockerfile.source
+++ b/teku/Dockerfile.source
@@ -27,6 +27,7 @@ ARG UID=10002
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y --no-install-recommends \
   ca-certificates \
   tzdata \
+  git \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
