--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -11,7 +11,7 @@ ARG USER=prysmconsensus
 ARG UID=10002
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y --no-install-recommends \
-  ca-certificates curl bash tzdata \
+  ca-certificates curl bash tzdata git \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
