--- a/reth/Dockerfile.binary
+++ b/reth/Dockerfile.binary
@@ -11,6 +11,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   ca-certificates \
   tzdata \
   gosu \
+  git \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
