--- a/besu/Dockerfile.binary
+++ b/besu/Dockerfile.binary
@@ -15,7 +15,7 @@ USER root
 RUN groupmod -g "${GID}" besu && usermod -u "${UID}" -g "${GID}" besu
 
 RUN set -eux; \
-        apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata; \
+        apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata git; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
