--- a/erigon/Dockerfile.source
+++ b/erigon/Dockerfile.source
@@ -20,7 +20,7 @@ ARG UID=10001
 # GID 10002 is deliberate so it can exchange secret with CL
 ARG GID=10002
 
-RUN apk add --no-cache libgcc libstdc++ bash ca-certificates tzdata su-exec
+RUN apk add --no-cache libgcc libstdc++ bash ca-certificates tzdata su-exec git jq
 
 RUN addgroup \
     --gid "${GID}" \
