--- a/geth.yml
+++ b/geth.yml
@@ -24,6 +24,7 @@ services:
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - EL_EXTRAS=${EL_EXTRAS:-}
       - ARCHIVE_NODE=${ARCHIVE_NODE:-}
+      - NETWORK=${NETWORK}
     volumes:
       - geth-eth1-data:/var/lib/goethereum
       - /etc/localtime:/etc/localtime:ro
@@ -44,8 +45,6 @@ services:
       - 0.0.0.0
       - --http.vhosts=*
       - --http.corsdomain=*
-      - --http.api
-      - web3,eth,net
       - --datadir
       - /var/lib/goethereum
       - --port
@@ -60,7 +59,6 @@ services:
       - --ws.api
       - web3,eth,net
       - --ws.origins=*
-      - --${NETWORK}
       - --metrics
       - --metrics.expensive
       - --pprof
