--- a/geth/Dockerfile.binary
+++ b/geth/Dockerfile.binary
@@ -10,7 +10,7 @@ ARG UID=10001
 # GID 10002 is deliberate so it can exchange secret with CL
 ARG GID=10002
 
-RUN apk update && apk add --no-cache ca-certificates tzdata bash su-exec
+RUN apk update && apk add --no-cache ca-certificates tzdata bash su-exec git jq
 
 RUN addgroup \
     --gid "${GID}" \
