Debug namespace for lodestar so ethdo exit creation

--- a/lodestar.yml
+++ b/lodestar.yml
@@ -52,6 +52,8 @@ services:
       - 0.0.0.0
       - --rest.port
       - ${CL_REST_PORT:-5052}
+      - --rest.namespace
+      - "beacon,config,events,node,validator,lightclient,debug"
       - --port
       - ${CL_P2P_PORT:-9000}
       - --nat
