--- a/default.env
+++ b/default.env
@@ -159,84 +159,111 @@ SSV2_NODE_TAG=latest
 # MEV-Boost
 # If mev-boost terminates with a SIGILL, make this one of the "portable" tags
 MEV_DOCKER_TAG=latest
+MEV_DOCKER_REPO=flashbots/mev-boost
 MEV_DOCKERFILE=Dockerfile.binary
 
 # Nimbus
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 NIM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+NIM_SRC_REPO=https://github.com/status-im/nimbus-eth2
 NIM_DOCKER_TAG=multiarch-latest
 NIM_DOCKER_VC_TAG=multiarch-latest
+NIM_DOCKER_REPO=statusim/nimbus-eth2
+NIM_DOCKER_VC_REPO=statusim/nimbus-validator-client
 NIM_DOCKERFILE=Dockerfile.binary
 
 # Teku
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 TEKU_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+TEKU_SRC_REPO=https://github.com/ConsenSys/teku
 TEKU_DOCKER_TAG=latest
+TEKU_DOCKER_REPO=consensys/teku
 TEKU_DOCKERFILE=Dockerfile.binary
 
 # Lighthouse
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 LH_SRC_BUILD_TARGET=stable
+LH_SRC_REPO=https://github.com/sigp/lighthouse
 # If Lighthouse terminates with a SIGILL, make this "latest"
 LH_DOCKER_TAG=latest-modern
+LH_DOCKER_REPO=sigp/lighthouse
 LH_DOCKERFILE=Dockerfile.binary
 
 # Prysm
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 PRYSM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+PRYSM_SRC_REPO=https://github.com/prysmaticlabs/prysm
 PRYSM_DOCKER_TAG=stable
 PRYSM_DOCKER_VC_TAG=stable
+PRYSM_DOCKER_REPO=gcr.io/prysmaticlabs/prysm/beacon-chain
+PRYSM_DOCKER_VC_REPO=gcr.io/prysmaticlabs/prysm/validator
 PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Lodestar
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 LS_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+LS_SRC_REPO=https://github.com/ChainSafe/lodestar
 LS_DOCKER_TAG=latest
+LS_DOCKER_REPO=chainsafe/lodestar
 LS_DOCKERFILE=Dockerfile.binary
 
 # Web3Signer
 W3S_DOCKER_TAG=latest
+W3S_DOCKER_REPO=consensys/web3signer
 PG_DOCKER_TAG=alpine
 
 # Besu
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 BESU_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+BESU_SRC_REPO=https://github.com/hyperledger/besu
 BESU_DOCKER_TAG=latest
+BESU_DOCKER_REPO=hyperledger/besu
 BESU_DOCKERFILE=Dockerfile.binary
 
 # Erigon
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 ERIGON_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+ERIGON_SRC_REPO=https://github.com/ledgerwatch/erigon
 ERIGON_DOCKER_TAG=stable
+ERIGON_DOCKER_REPO=thorax/erigon
 ERIGON_DOCKERFILE=Dockerfile.binary
 
 # Nethermind
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 NM_SRC_BUILD_TARGET='$(git tag --sort=-committerdate | grep -E "^[0-9]+[.][0-9]+[.][0-9]+$" | head -1)'
+NM_SRC_REPO=https://github.com/NethermindEth/nethermind
 NM_DOCKER_TAG=latest
+NM_DOCKER_REPO=nethermind/nethermind
 NM_DOCKERFILE=Dockerfile.binary
 
 # Go-Ethereum aka Geth
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 GETH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+GETH_SRC_REPO=https://github.com/ethereum/go-ethereum
 GETH_DOCKER_TAG=stable
+GETH_DOCKER_REPO=ethereum/client-go
 GETH_DOCKERFILE=Dockerfile.binary
 
 # Nimbus EL
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 NIMEL_SRC_BUILD_TARGET=master
+NIMEL_SRC_REPO=https://github.com/status-im/nimbus-eth1
 NIMEL_DOCKER_TAG=nonesuch
+NIMEL_DOCKER_REPO=nonesuch
 NIMEL_DOCKERFILE=Dockerfile.source
 
 # Reth
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 RETH_SRC_BUILD_TARGET=main
+RETH_SRC_REPO=https://github.com/paradigmxyz/reth
 RETH_DOCKER_TAG=latest
+RETH_DOCKER_REPO=ghcr.io/paradigmxyz/reth
 RETH_DOCKERFILE=Dockerfile.binary
 
 # staking-deposit-cli
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 DEPCLI_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+DEPCLI_SRC_REPO=https://github.com/ethereum/staking-deposit-cli
 # Does not (yet?) exist on Docker hub
 DEPCLI_DOCKER_TAG=nonesuch
 
