--- a/erigon.yml
+++ b/erigon.yml
@@ -14,8 +14,10 @@ services:
       context: ./erigon
       dockerfile: ${ERIGON_DOCKERFILE}
       args:
-        - BUILD_TARGET=${ERIGON_SRC_BUILD_TARGET}
-        - DOCKER_TAG=${ERIGON_DOCKER_TAG}
+        - BUILD_TARGET=${ERIGON_SRC_BUILD_TARGET:-'$(git describe --tags $(git rev-list --tags --max-count=1))'}
+        - SRC_REPO=${ERIGON_SRC_REPO:-https://github.com/ledgerwatch/erigon}
+        - DOCKER_TAG=${ERIGON_DOCKER_TAG:-stable}
+        - DOCKER_REPO=${ERIGON_DOCKER_REPO:-thorax/erigon}
     stop_grace_period: 5m
     image: erigon:local
     user: erigon
