--- a/erigon/Dockerfile.source
+++ b/erigon/Dockerfile.source
@@ -3,13 +3,15 @@ FROM golang:1.20-alpine as builder
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
+ARG DOCKER_REPO
 
 ARG BUILD_TARGET
+ARG SRC_REPO
 
 RUN apk update && apk add --no-cache make gcc g++ musl-dev linux-headers git bash
 
 WORKDIR /src
-RUN bash -c "git clone --recurse-submodules -j8 https://github.com/ledgerwatch/erigon.git && cd erigon && git config advice.detachedHead false && git fetch --all --tags && \
+RUN bash -c "git clone --recurse-submodules -j8 ${SRC_REPO} erigon && cd erigon && git config advice.detachedHead false && git fetch --all --tags && \
 if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:erigon-pr; git checkout erigon-pr; else git checkout ${BUILD_TARGET}; fi && make erigon"
 
 # Pull all binaries into a second stage deploy container
