--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -11,8 +11,10 @@ x-build: &ls-build
   context: ./lodestar
   dockerfile: ${LS_DOCKERFILE}
   args:
-    - BUILD_TARGET=${LS_SRC_BUILD_TARGET}
-    - DOCKER_TAG=${LS_DOCKER_TAG}
+    - BUILD_TARGET=${LS_SRC_BUILD_TARGET:-'$(git describe --tags $(git rev-list --tags --max-count=1))'}
+    - SRC_REPO=${LS_SRC_REPO:-https://github.com/ChainSafe/lodestar}
+    - DOCKER_TAG=${LS_DOCKER_TAG:-latest}
+    - DOCKER_REPO=${LS_DOCKER_REPO:-chainsafe/lodestar}
 
 services:
   validator:
