--- a/nethermind.yml
+++ b/nethermind.yml
@@ -16,8 +16,10 @@ services:
       context: ./nethermind
       dockerfile: ${NM_DOCKERFILE}
       args:
-        - BUILD_TARGET=${NM_SRC_BUILD_TARGET}
-        - DOCKER_TAG=${NM_DOCKER_TAG}
+        - BUILD_TARGET=${NM_SRC_BUILD_TARGET:-'$(git tag --sort=-committerdate | grep -E "^[0-9]+[.][0-9]+[.][0-9]+$" | head -1)'}
+        - SRC_REPO=${NM_SRC_REPO:-https://github.com/NethermindEth/nethermind}
+        - DOCKER_TAG=${NM_DOCKER_TAG:-latest}
+        - DOCKER_REPO=${NM_DOCKER_REPO:-nethermind/nethermind}
     image: nethermind:local
     user: nethermind
     environment:
