--- a/reth/Dockerfile.source
+++ b/reth/Dockerfile.source
@@ -3,13 +3,15 @@ FROM rust:bookworm as builder
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
+ARG DOCKER_REPO
 
 ARG BUILD_TARGET
+ARG SRC_REPO
 
 RUN apt-get update && apt-get install -y libclang-dev
 
 WORKDIR /src
-RUN bash -c "git clone --recurse-submodules -j8 https://github.com/paradigmxyz/reth.git && cd reth \
+RUN bash -c "git clone --recurse-submodules -j8 ${SRC_REPO} reth && cd reth \
     && git config advice.detachedHead false && git fetch --all --tags \
     && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:reth-pr; git checkout reth-pr; else git checkout ${BUILD_TARGET}; fi \
     && RUSTFLAGS='-C target-cpu=native' cargo build --profile maxperf --features jemalloc"
