--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -3,13 +3,15 @@ FROM eclipse-temurin:17-jdk-jammy as builder
 
 # This is here to avoid build-time complaints
 ARG DOCKER_TAG
+ARG DOCKER_REPO
 
 ARG BUILD_TARGET
+ARG SRC_REPO
 
 RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates git
 
 WORKDIR /usr/src
-RUN bash -c "git clone --recurse-submodules -j8 https://github.com/hyperledger/besu.git && cd besu && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:besu-pr; git checkout besu-pr; else git checkout ${BUILD_TARGET}; fi && ./gradlew installDist"
+RUN bash -c "git clone --recurse-submodules -j8 ${SRC_REPO} besu && cd besu && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:besu-pr; git checkout besu-pr; else git checkout ${BUILD_TARGET}; fi && ./gradlew installDist"
 
 # Pull all binaries into a second stage deploy Ubuntu container
 FROM eclipse-temurin:17-jre-jammy
