--- a/nimbus/Dockerfile.source
+++ b/nimbus/Dockerfile.source
@@ -3,13 +3,17 @@ FROM debian:bookworm-slim as builder
 
 # Included here to avoid build-time complaints
 ARG DOCKER_TAG
+ARG DOCKER_VC_TAG
+ARG DOCKER_REPO
+ARG DOCKER_VC_REPO
 
 ARG BUILD_TARGET
+ARG SRC_REPO
 
 RUN apt-get update && apt-get install -y build-essential git ca-certificates
 
 WORKDIR /usr/src
-RUN bash -c "git clone --recurse-submodules -j8 https://github.com/status-im/nimbus-eth2 && cd nimbus-eth2 && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:nim-pr; git checkout nim-pr; else git checkout ${BUILD_TARGET}; fi && make -j$(nproc) update && make -j$(nproc) nimbus_beacon_node nimbus_validator_client"
+RUN bash -c "git clone --recurse-submodules -j8 ${SRC_REPO} nimbus-eth2 && cd nimbus-eth2 && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:nim-pr; git checkout nim-pr; else git checkout ${BUILD_TARGET}; fi && make -j$(nproc) update && make -j$(nproc) nimbus_beacon_node nimbus_validator_client"
 
 # Pull all binaries into a second stage deploy debian container
 FROM debian:bookworm-slim as consensus
