--- a/nimbus/Dockerfile.sourceslottime
+++ b/nimbus/Dockerfile.sourceslottime
@@ -3,14 +3,18 @@ FROM debian:bookworm-slim as builder
 
 # Included here to avoid build-time complaints
 ARG DOCKER_TAG
+ARG DOCKER_VC_TAG
+ARG DOCKER_REPO
+ARG DOCKER_VC_REPO
 
 ARG BUILD_TARGET
+ARG SRC_REPO
 ARG SECONDS_PER_SLOT=12
 
 RUN apt-get update && apt-get install -y build-essential git libpcre3-dev ca-certificates
 
 WORKDIR /usr/src
-RUN bash -c "git clone https://github.com/status-im/nim-beacon-chain && cd nim-beacon-chain && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && \
+RUN bash -c "git clone ${SRC_REPO} nimbus-eth2 && cd nimbus-eth2 && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && \
 	make -j$(nproc) NIMFLAGS="-d:SECONDS_PER_SLOT=${SECONDS_PER_SLOT}" nimbus_beacon_node"
 
 # Pull all binaries into a second stage deploy debian container
@@ -44,7 +48,7 @@ RUN adduser \
 RUN mkdir -p /var/lib/nimbus && chown ${USER}:${USER} /var/lib/nimbus && chmod 700 /var/lib/nimbus
 
 # Cannot assume buildkit, hence no chmod
-COPY --from=builder --chown=${USER}:${USER} /usr/src/nim-beacon-chain/build/nimbus_beacon_node /usr/local/bin/nimbus_beacon_node
+COPY --from=builder --chown=${USER}:${USER} /usr/src/nimbus-eth2/build/nimbus_beacon_node /usr/local/bin/nimbus_beacon_node
 COPY --chown=${USER}:${USER} ./docker-entrypoint.sh /usr/local/bin/
 # Belt and suspenders
 RUN chmod -R 755 /usr/local/bin/*
