--- a/prysm.yml
+++ b/prysm.yml
@@ -11,9 +11,12 @@ x-build: &prysm-build
   context: ./prysm
   dockerfile: ${PRYSM_DOCKERFILE}
   args:
-    - BUILD_TARGET=${PRYSM_SRC_BUILD_TARGET}
-    - DOCKER_TAG=${PRYSM_DOCKER_TAG}
-    - DOCKER_VC_TAG=${PRYSM_DOCKER_VC_TAG}
+    - BUILD_TARGET=${PRYSM_SRC_BUILD_TARGET:-'$(git describe --tags $(git rev-list --tags --max-count=1))'}
+    - SRC_REPO=${PRYSM_SRC_REPO:-https://github.com/prysmaticlabs/prysm}
+    - DOCKER_TAG=${PRYSM_DOCKER_TAG:-stable}
+    - DOCKER_VC_TAG=${PRYSM_DOCKER_VC_TAG:-stable}
+    - DOCKER_REPO=${PRYSM_DOCKER_REPO:-gcr.io/prysmaticlabs/prysm/beacon-chain}
+    - DOCKER_VC_REPO=${PRYSM_DOCKER_VC_REPO:-gcr.io/prysmaticlabs/prysm/validator}
 
 services:
   consensus:
