--- a/prysm/Dockerfile.source
+++ b/prysm/Dockerfile.source
@@ -3,13 +3,17 @@ FROM golang:1.21-bookworm as builder
 
 # Here only to avoid build-time errors
 ARG DOCKER_TAG
+ARG DOCKER_VC_TAG
+ARG DOCKER_REPO
+ARG DOCKER_VC_REPO
 
 ARG BUILD_TARGET
+ARG SRC_REPO
 
 RUN apt-get update && apt-get install -y cmake libtinfo5 libgmp-dev npm && npm install -g @bazel/bazelisk && bazel version
 
 WORKDIR /go/src
-RUN bash -c "git clone https://github.com/prysmaticlabs/prysm.git && cd prysm && git config advice.detachedHead false && git fetch --all --tags && \
+RUN bash -c "git clone ${SRC_REPO} prysm && cd prysm && git config advice.detachedHead false && git fetch --all --tags && \
 if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:prysm-pr; git checkout prysm-pr; else git checkout ${BUILD_TARGET}; fi \
 && bazel build --config=release //cmd/beacon-chain:beacon-chain && bazel build --config=release //cmd/validator:validator && bazel build --config=release //cmd/client-stats:client-stats"
 
