--- a/staking-deposit-cli/Dockerfile
+++ b/staking-deposit-cli/Dockerfile
@@ -1,15 +1,19 @@
-from python:3.10-bookworm as builder
+from python:3.10-alpine as builder
+#from python:3.11-alpine as builder
 
 ARG BUILD_TARGET
 ARG SRC_REPO
 
 RUN mkdir -p /src
 
+RUN apk add --update bash git
+
 WORKDIR /src
 RUN bash -c "git clone ${SRC_REPO} staking-deposit-cli && cd staking-deposit-cli && git config advice.detachedHead false && git fetch --all --tags \
   && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:deposit-pr; git checkout deposit-pr; else git checkout ${BUILD_TARGET}; fi"
 
 FROM python:3.10-alpine
+#FROM python:3.11-alpine
 
 ARG USER=depcli
 ARG UID=1000
