Fix Prysm genesis

--- a/default.env
+++ b/default.env
@@ -16,7 +16,7 @@ GRAFFITI=🦉eth-docker🦉
 # Set to true to use the client's default Graffiti. Overrides GRAFFITI
 DEFAULT_GRAFFITI=false
 # Merged network to use. If using main net, set to mainnet.
-NETWORK=goerli
+NETWORK=holesky
 # CL rapid sync via initial state/checkpoint. Please use one from https://eth-clients.github.io/checkpoint-sync-endpoints/
 # Alternatively, use an already synced CL that you trust. No trailing / for Teku, please.
 RAPID_SYNC_URL=
