Support new web3-signer-url in Nimbus

--- a/lodestar.yml
+++ b/lodestar.yml
@@ -153,6 +153,7 @@ services:
       - ${LOG_LEVEL}
       - --network
       - ${NETWORK}
+      - --force
 
   validator-keys:
     profiles: ["tools"]
