--- a/nimbus-cl-only.yml
+++ b/nimbus-cl-only.yml
@@ -44,6 +44,8 @@ services:
       - ARCHIVE_NODE=${ARCHIVE_NODE:-}
       - GRAFFITI=${GRAFFITI:-}
       - DEFAULT_GRAFFITI=true
+      - WEB3SIGNER=false
+      - EMBEDDED_VC=false
     ports:
       - ${HOST_IP:-}${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
       - ${HOST_IP:-}${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
