--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -92,6 +92,7 @@ services:
       - ${LOG_LEVEL}
       - --network
       - ${NETWORK}
+      - --force
 
   validator-keys:
     profiles: ["tools"]
