--- a/nimbus-vc-only.yml
+++ b/nimbus-vc-only.yml
@@ -37,6 +37,7 @@ services:
       - VC_EXTRAS=${VC_EXTRAS:-}
       - GRAFFITI=${GRAFFITI:-}
       - DEFAULT_GRAFFITI=${DEFAULT_GRAFFITI:-false}
+      - WEB3SIGNER=${WEB3SIGNER:-false}
     networks:
       default:
         aliases:
