Enable Siren and change how traefik and shared ports are configured

--- a/default.env
+++ b/default.env
@@ -42,6 +42,7 @@ CF_ZONE_ID=
 AWS_PROFILE=myprofile
 AWS_HOSTED_ZONE_ID=myzoneid
 GRAFANA_HOST=grafana
+SIREN_HOST=siren
 PROM_HOST=prometheus
 PRYSM_HOST=prysm
 EE_HOST=ee
@@ -51,6 +52,7 @@ EL_WS_HOST=elws
 EL_WS_LB=elws-lb
 CL_HOST=cl
 CL_LB=cl-lb
+VC_HOST=vc
 DDNS_SUBDOMAIN=grafana
 DDNS_PROXY=true
 
@@ -70,6 +72,10 @@ BEACON_STATS_MACHINE=
 # Note if you set it, and only then, you MUST append a colon to the end, like 1.2.3.4: or [2001:1:2::3]:, to work around
 # a limitation of compose V1, even when using compose V2
 HOST_IP=
+# IP address to use when host-mapping port through *-shared.yml. Set this to 127.0.0.1: to restrict the share to localhost
+# Note if you set it, and only then, you MUST append a colon to the end, like 1.2.3.4: or [2001:1:2::3]:, to work around
+# a limitation of compose V1, even when using compose V2
+SHARE_IP=
 
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
@@ -79,6 +85,8 @@ PRYSM_PORT=9000
 PRYSM_UDP_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
+# Local Siren UI port. Do not expose to Internet, it is insecure http
+SIREN_PORT=8080
 # Prometheus port used when exposing directly on host; used for federation
 PROMETHEUS_PORT=9090
 # Local key manager port. Reachable only via localhost. Also doubles as Prysm web port
@@ -188,6 +196,10 @@ LH_SRC_REPO=https://github.com/sigp/lighthouse
 LH_DOCKER_TAG=latest-modern
 LH_DOCKER_REPO=sigp/lighthouse
 LH_DOCKERFILE=Dockerfile.binary
+
+# Lighthouse Siren
+SIREN_DOCKER_TAG=latest
+SIREN_DOCKER_REPO=sigmaprime/siren
 
 # Prysm
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
