--- a/grafana.yml
+++ b/grafana.yml
@@ -19,7 +19,12 @@ services:
     environment:
       - CLIENT=${COMPOSE_FILE}
     entrypoint: choose-config.sh
-    command: ["/bin/prometheus", "--storage.tsdb.path=/prometheus", "--web.console.libraries=/usr/share/prometheus/console_libraries", "--web.console.templates=/usr/share/prometheus/consoles"]
+    command:
+      - /bin/prometheus
+      - --storage.tsdb.path=/prometheus
+      - --storage.tsdb.retention.time=40d
+      - --web.console.libraries=/usr/share/prometheus/console_libraries
+      - --web.console.templates=/usr/share/prometheus/consoles
     <<: *logging
     labels:
       - traefik.enable=true
