Nethermind executable names for v1.21

--- a/nethermind.yml
+++ b/nethermind.yml
@@ -42,8 +42,7 @@ services:
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
-      - dotnet
-      - /nethermind/Nethermind.Runner.dll
+      - /nethermind/nethermind
       - --datadir
       - /var/lib/nethermind
       - --Init.WebSocketsEnabled
